--- a/yuva_kabaddi_score_board_app_index.html
+++ b/yuva_kabaddi_score_board_app_index.html
@@ -31,12 +31,7 @@
     -->
     <title>React App</title>
   </head>
-  <body
-    style="
-        margin: 0px;
-        overflow: hidden;
-    "
-  >
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
